--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "apexcharts": "^3.27.1",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.2",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-apexcharts": "^1.6.1",
+    "vuewordcloud": "^18.7.12"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
